--- a/PLDroidShortVideoDemo/app/build.gradle
+++ b/PLDroidShortVideoDemo/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.3"
 
     sourceSets.main.jni.srcDirs = []
 
     defaultConfig {
         applicationId "com.qiniu.shortvideo.bytedance"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionName "2.2.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
@@ -65,26 +65,26 @@ dependencies {
     // Optional, if you use support library fragments:
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
     api 'com.google.zxing:core:3.3.3'
-    api 'com.squareup.okhttp3:okhttp:3.6.0'
-    compile 'com.zhihu.android:matisse:0.5.2-beta1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    api 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.zhihu.android:matisse:0.5.2-beta1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     api(name: 'android_sdk', ext: 'aar')
 
-    compile 'com.qiniu:qiniu-android-sdk:7.3.11'
-    compile files('libs/pldroid-shortvideo-2.2.0.jar')
-    compile files('libs/pldroid-player-2.1.8.jar')
-    compile files('libs/EasyAR.jar')
-    compile files('libs/EasyAR3D.jar')
+    implementation 'com.qiniu:qiniu-android-sdk:7.3.11'
+    implementation files('libs/pldroid-shortvideo-2.2.0.jar')
+    implementation files('libs/pldroid-player-2.1.8.jar')
+    implementation files('libs/EasyAR.jar')
+    implementation files('libs/EasyAR3D.jar')
 
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     //noinspection GradleCompatible
-    compile 'com.android.support:recyclerview-v7:27.1.1'
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support:design:27.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    compile files('libs/universal-image-loader-1.9.4.jar')
-    compile 'com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.6'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation files('libs/universal-image-loader-1.9.4.jar')
+    implementation 'com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.6'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
